--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,15 +8,17 @@ enable_testing()
 set(Libsources
 	thread1.cpp
 	LinesList.cpp
+	cmd_clean.cpp
 )
 
 set(Libheaders
     thread1.h
 	LinesList.h
+	cmd_clean.h
 )
 
 add_library(Mylib STATIC ${Libsources} ${Libheaders})
 
-add_executable(thread main.cpp thread1.cpp thread1.h LinesList.cpp LinesList.h)
+add_executable(thread main.cpp thread1.cpp thread1.h LinesList.cpp LinesList.h cmd_clean.cpp cmd_clean.h)
 
 add_subdirectory(tests)
