Added command base class and cmd_engine.  Ready to write main loop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,16 +9,18 @@ set(Libsources
 	thread1.cpp
 	LinesList.cpp
 	cmd_clean.cpp
+	cmd_engine.cpp
 )
 
 set(Libheaders
     thread1.h
 	LinesList.h
 	cmd_clean.h
+	cmd_engine.h
 )
 
 add_library(Mylib STATIC ${Libsources} ${Libheaders})
 
-add_executable(thread main.cpp thread1.cpp thread1.h LinesList.cpp LinesList.h cmd_clean.cpp cmd_clean.h)
+add_executable(thread main.cpp thread1.cpp thread1.h LinesList.cpp LinesList.h cmd_clean.cpp cmd_clean.h command.h cmd_engine.cpp cmd_engine.h)
 
 add_subdirectory(tests)
