--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,22 +6,22 @@ set(CMAKE_CXX_STANDARD 14)
 enable_testing()
 
 set(Libsources
-	thread1.cpp
+        Exercise1/thread1.cpp
 	LinesList.cpp
-	cmd_clean.cpp
-	cmd_engine.cpp
+        Exercise1/cmd_clean.cpp
+        Exercise1/cmd_engine.cpp
 )
 
 set(Libheaders
-    thread1.h
+        Exercise1/thread1.h
 	LinesList.h
-	cmd_clean.h
-	cmd_engine.h
+        Exercise1/cmd_clean.h
+        Exercise1/cmd_engine.h
 	SafeQueue.h
-)
+		Exercise2/commandData.cpp Exercise2/commandData.h Exercise2/queueThread.cpp Exercise2/queueThread.h Exercise2/QueueThreadCannotStart.cpp Exercise2/QueueThreadCannotStart.h Exercise2/workerThread.cpp Exercise2/workerThread.h)
 
 add_library(Mylib STATIC ${Libsources} ${Libheaders})
 
-add_executable(thread main.cpp thread1.cpp thread1.h LinesList.cpp LinesList.h cmd_clean.cpp cmd_clean.h command.h cmd_engine.cpp cmd_engine.h SafeQueue.h)
+add_executable(thread main.cpp Exercise1/thread1.cpp Exercise1/thread1.h LinesList.cpp LinesList.h Exercise1/cmd_clean.cpp Exercise1/cmd_clean.h Exercise1/command.h Exercise1/cmd_engine.cpp Exercise1/cmd_engine.h SafeQueue.h Exercise1/Exercise1Main.cpp)
 
 add_subdirectory(tests)
